# Million

./: .env.example  .gitignore  Bilka_produkter.xlsx  CLAUDE.md  Dev  Features  Github_fifs  Meny_produkter.xlsx  Products-bilka.xlsx  README.md  Spar_produkter.xlsx  Webscrape_Bilka  Webscrape_Bilka.py  app.py  app_support.py  hash_rema_images.py  hjemmesider  minkobmand_produkter.xlsx  patch.py  price_history.db  produktnavne.xlsx  pyproject.toml  pyrightconfig.json  requirements.txt  review_ai_decisions.py  scratchpad_update_css.py  scratchpad_update_html.py  scratchpad_update_js.py  test.py  test_bilka.py  test_netto.py  test_supabase.py  updater.py  webscape_minkøbmand.py  webscrape_Meny.py  webscrape_spar.py  worker-test.js  wrangler.toml
.claude/: settings.local.json
Xlsx filer/: 365Discount_produkter.xlsx  Bilka_produkter.xlsx  Brugsen_produkter.xlsx  Kvickly_produkter.xlsx  Meny_produkter.xlsx  Spar_produkter.xlsx  SuperBrugsen_produkter.xlsx  minkobmand_produkter.xlsx
data/: ai_classifier_cache.db  ai_decisions.csv  bilka_normal_prices.json  meny_normal_prices.json  mk_normal_prices.json  rema_hashes.json  spar_normal_prices.json
docs/: Dev.md  Features.md  Github_fifs.md  email-bekraeftelse.md  prisovervaagning.md
scraper/: Webscrape_Bilka.py  ai_classifier.py  bilka_katalog.py  dagrofa_scraper.py  foetex_katalog.py  foetex_plus_priser.py  get_foetex_token.py  keywords.py  lidl_katalog.py  netto_katalog.py  netto_plus_priser.py  scraper_utils.py  supabase_utils.py  tjek_tilbud_scraper.py  webscape_minkøbmand.py  webscrape_365discount.py  webscrape_Meny.py  (+11 more)
(+88 files in other folders)
